2003/11/30 14:48 (+0100) kaffeetisch

	A xs/GnomeIconTextItem.xs
	* t/GnomeIconList.t
	* MANIFEST: Initial implementation and test for GnomeIconTextItem.

2003/11/29 17:01 (+0100) kaffeetisch

	* gnome2perl.h: Include bonobo/bonobo-dock.h and
	bonobo/bonobo-dock-item.h.

2003/11/29 09:15 (-0500) muppetman

	* xs/GnomeAppHelper.xs: remove unused variables.

2003/11/28 22:19 (+0100) kaffeetisch

	* Gnome2.pm
	* META.yml
	* README: Prepare the release of 0.49.

	* t/GnomePasswordDialog.t
	* xs/Gnome2.xs: Change the package name from
	Gnome2::Authentication::Manager to Gnome2::AuthenticationManager.

	* xs/GnomeAppHelper: Add API documentation.

	* xs/GnomeGConf.xs: Put API documentation into Gnome2::main so
	that we don't overwrite Gnome2::GConf's POD/man pages.

2003/11/26 14:37 (-0500) muppetman

	* gnome2perl.h
	* xs/GnomeAppHelper.xs: put SvGnomeUIInfo in the package header
	to quell compiler warnings and make sure the typechecking is 
	correct.

2003/11/25 00:06 (+0100) kaffeetisch

	A t/GnomePasswordDialog.t
	A xs/GnomePasswordDialog.xs
	* MANIFEST: Initial implementation of Gnome2::PasswordDialog.

	R gnome2perl.typemap
	A gnome.typemap
	* MANIFEST
	* Makefile.PL: Rename gnome2perl.typemap to gnome.typemap to avoid
	that it gets overwritten by the one generated by Gtk2::CodeGen.

	* xs/Gnome2.xs: Implement Gnome2::Authentication::Manager::init.

	* Gnome2.pm
	* Makefile.PL
	* gnome2perl.h
	* t/GnomeIconTheme.t
	* xs/GnomeIconLookup.xs: Implement and test
	Gnome2::IconTheme::lookup.  That required adding Gnome2::VFS to
	the dependencies.

	* xs/GnomeIconLookup.xs: Check and free the icon return value of
	gnome_icon_lookup_sync.

2003/11/21 02:15 (-0500) muppetman

	* xs/GnomeAppHelper.xs, xs/GnomeWindow.xs, xs/GnomePopupMenu.xs,
	xs/GnomeThumbnail.xs: shuffle docs around to keep from clobbering
	docs from other extensions.

2003/11/15 12:13 (+0100) kaffeetisch

	* Gnome2.pm: Add a comma.

	* xs/BonoboDock.xs
	* xs/GnomeDruid.xs
	* xs/GnomeIconList.xs